Aligntment fix

--- a/assets/sass/templates/_company.scss
+++ b/assets/sass/templates/_company.scss
@@ -45,6 +45,6 @@
 		position: absolute;
 		bottom: 1em;
 		left: 50%;
-		margin-left: -7em;
+		margin-left: -6.5em;
 	}
 }
